@@ -5,6 +5,7 @@ Version 0.9 "Marquesas" -- Subversion
 dev to write modules.  Not only is it now object oriented, it is
 also better organized and navigations related functions are
 much, much easier.
+* Stylesheet URL is now absolute based on root_url in config.php
 
 Version 0.8.2 "Taunoa" -- Mon Jan 17 2005
 -----------------
